<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/itemRecipe"
    style="@style/CardBackground"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="@dimen/activity_horizontal_margin"
    android:layout_marginTop="@dimen/activity_horizontal_margin"
    android:layout_marginEnd="@dimen/activity_horizontal_margin"
    card_view:cardCornerRadius="@dimen/activity_horizontal_margin"
    card_view:cardElevation="2dp"
    card_view:cardPreventCornerOverlap="false">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/item_cont"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/background_blur"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:scaleType="fitXY"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintHorizontal_bias="0.0"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toTopOf="parent"
            card_view:layout_constraintVertical_bias="0.0" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/circleImageView"
            android:layout_width="@dimen/image_size"
            android:layout_height="@dimen/image_size"
            android:layout_gravity="center"

            android:layout_margin="@dimen/activity_horizontal_margin"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/name"
            style="@style/BoldFont"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:gravity="start"
            android:singleLine="true"
            android:layout_margin="16dp"
            android:textSize="@dimen/small_text"
            card_view:layout_constraintBottom_toBottomOf="@+id/circleImageView"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintStart_toEndOf="@+id/circleImageView"
            card_view:layout_constraintTop_toBottomOf="@+id/time_text" />

        <ImageView
            android:id="@+id/item_like"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:src="@drawable/ic_unliked"
            android:tag="@string/no_like"
            card_view:layout_constraintStart_toEndOf="@id/weight"
            card_view:layout_constraintBottom_toBottomOf="@+id/weight_text"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintTop_toTopOf="@+id/weight" />

        <TextView
            android:id="@+id/kal"
            style="@style/BoldFont"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:textSize="@dimen/medium_text"
            card_view:layout_constraintEnd_toStartOf="@+id/time"
            card_view:layout_constraintStart_toEndOf="@+id/circleImageView"
            card_view:layout_constraintTop_toTopOf="@+id/circleImageView" />

        <TextView
            android:id="@+id/kal_text"
            style="@style/LightFont"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/kal"
            android:textSize="@dimen/small_text"
            card_view:layout_constraintEnd_toEndOf="@+id/kal"
            card_view:layout_constraintStart_toStartOf="@+id/kal"
            card_view:layout_constraintTop_toBottomOf="@+id/kal" />

        <TextView
            android:id="@+id/time"
            style="@style/BoldFont"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:textSize="@dimen/medium_text"
            card_view:layout_constraintEnd_toEndOf="@+id/item_like"
            card_view:layout_constraintStart_toEndOf="@+id/circleImageView"
            card_view:layout_constraintTop_toTopOf="@+id/circleImageView" />

        <TextView
            android:id="@+id/time_text"
            style="@style/LightFont"
            android:layout_width="@dimen/calories_width"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/min"
            android:textSize="@dimen/small_text"
            card_view:layout_constraintEnd_toEndOf="@+id/time"
            card_view:layout_constraintStart_toStartOf="@+id/time"
            card_view:layout_constraintTop_toBottomOf="@+id/time" />

        <TextView
            android:id="@+id/weight"
            style="@style/BoldFont"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:textSize="@dimen/medium_text"
            card_view:layout_constraintEnd_toEndOf="@+id/item_like"
            card_view:layout_constraintStart_toEndOf="@+id/time"
            card_view:layout_constraintTop_toTopOf="@+id/circleImageView" />

        <TextView
            android:id="@+id/weight_text"
            style="@style/LightFont"
            android:layout_width="@dimen/calories_width"
            android:layout_height="wrap_content"

            android:gravity="center"
            android:text="@string/gr"
            android:textSize="@dimen/small_text"
            card_view:layout_constraintEnd_toEndOf="@+id/weight"
            card_view:layout_constraintStart_toStartOf="@+id/weight"
            card_view:layout_constraintTop_toBottomOf="@+id/weight" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>